Fix light & dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-
-body {
-  margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@media (prefers-color-scheme: light) {
+  .w-tc-editor {
+    --color-canvas-subtle: rgb(243 244 246) !important;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media (prefers-color-scheme: dark) {
+  .w-tc-editor {
+    --color-canvas-subtle: rgb(30, 41, 59) !important;
+  }
 }
